added blog-upload page

--- a/src/components/ChatBot/style.css
+++ b/src/components/ChatBot/style.css
@@ -125,12 +125,12 @@
     border-bottom-right-radius: 0;
 }
 
-.messages__img{
+/* .messages__img{
     width: 30px;
     height: 30px;
     border-radius: 50px;
     margin-right: 10px;
-}
+} */
 
 .chatbox_close{
     background-color: transparent;
